objects/PC_Order__c.object
<CustomObject>
    <fields>
        <fullName>ACLS_Engagement_Program_Code__c</fullName>
        <label>Engagement Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ActualDeliveryDate__c</fullName>
        <description>Date when the order was delivered.</description>
        <inlineHelpText>Date when the order was delivered.</inlineHelpText>
        <label>Actual Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_DeliveryDayRun__c</fullName>
        <description>Time period when the order delivery would be done.</description>
        <inlineHelpText>Time period when the order delivery would be done.</inlineHelpText>
        <label>Delivery Day Run</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Day Delivery</fullName>
                </value>
                <value>
                    <fullName>2 Day Delivery</fullName>
                </value>
                <value>
                    <fullName>Weekend Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_EstimatedDeliveryDate__c</fullName>
        <description>Date when the order is expected to deliver.</description>
        <inlineHelpText>Date when the order is expected to deliver.</inlineHelpText>
        <label>Estimated Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_OrderAddress1__c</fullName>
        <description>First line of the primary address of ‘Ship To’ Account.</description>
        <inlineHelpText>First line of the primary address of ‘Ship To’ Account.</inlineHelpText>
        <label>Address 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderAddress2__c</fullName>
        <description>Second line of the primary address of ‘Ship To’ Account.</description>
        <inlineHelpText>Second line of the primary address of ‘Ship To’ Account.</inlineHelpText>
        <label>Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderAddress3__c</fullName>
        <description>Third line of the primary address of ‘Ship To’ Account.</description>
        <inlineHelpText>Third line of the primary address of ‘Ship To’ Account.</inlineHelpText>
        <label>Address 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderAddressCity__c</fullName>
        <description>City of the primary address of ‘Ship To’ Account.</description>
        <inlineHelpText>City of the primary address of ‘Ship To’ Account.</inlineHelpText>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderAddressState__c</fullName>
        <description>State of the primary address of ‘Ship To’ Account.</description>
        <inlineHelpText>State of the primary address of ‘Ship To’ Account.</inlineHelpText>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderAddressZipCode__c</fullName>
        <description>Zip code of the primary address of ‘Ship To’ Account.</description>
        <label>Zip Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderInstructions__c</fullName>
        <description>Instructions for the order or delivery.</description>
        <inlineHelpText>Instructions for the order or delivery.</inlineHelpText>
        <label>Order Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderStatus__c</fullName>
        <description>Status of the order.</description>
        <inlineHelpText>Status of the order.</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Entered-in-error</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_OrderType__c</fullName>
        <description>Type of order.</description>
        <inlineHelpText>Type of order.</inlineHelpText>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bridge Program</fullName>
                </value>
                <value>
                    <fullName>PAP</fullName>
                </value>
                <value>
                    <fullName>Sample Products</fullName>
                </value>
                <value>
                    <fullName>Enrollment Package</fullName>
                </value>
                <value>
                    <fullName>Home Infusion Training set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PreferredDeliveryDate__c</fullName>
        <description>Date when the order recipient prefers to receive the shipment.</description>
        <inlineHelpText>Date when the order recipient prefers to receive the shipment.</inlineHelpText>
        <label>Preferred Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_PreferredDeliveryWindow__c</fullName>
        <description>Time when the order recipient prefers to receive the shipment.</description>
        <inlineHelpText>Time when the order recipient prefers to receive the shipment.</inlineHelpText>
        <label>Preferred Delivery Window</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anytime</fullName>
                </value>
                <value>
                    <fullName>8:00AM - Noon</fullName>
                </value>
                <value>
                    <fullName>Noon - 4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM - 8:00PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prescription the order is submitted for.</description>
        <inlineHelpText>Prescription the order is submitted for.</inlineHelpText>
        <label>Prescription</label>
        <referenceTo>PC_Prescription__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ProgramCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program case the order is related to.</description>
        <inlineHelpText>Program case the order is related to.</inlineHelpText>
        <label>Program Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ReceivedBy__c</fullName>
        <description>Entity who received the order.</description>
        <inlineHelpText>Entity who received the order.</inlineHelpText>
        <label>Received By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_ShipTo2__c</fullName>
        <label>Ship To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity whom the order is being shipped to.</description>
        <inlineHelpText>Entity whom the order is being shipped to.</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ShipmentTrackingNumber__c</fullName>
        <description>Unique tracking number of the order shipment.</description>
        <inlineHelpText>Unique tracking number of the order shipment.</inlineHelpText>
        <label>Shipment Tracking Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_ShippingDate__c</fullName>
        <description>Date when the order is shipped.</description>
        <inlineHelpText>Date when the order is shipped.</inlineHelpText>
        <label>Shipping Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_SubmittedDate__c</fullName>
        <description>Date when the request of order was submitted.</description>
        <inlineHelpText>Date when the request of order was submitted.</inlineHelpText>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ord-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PC_Program_Case_Validation</fullName>
        <active>true</active>
        <description>The Program Case lookup should only allow Program type of Cases</description>
        <errorConditionFormula>IF(OR(ISBLANK( PC_ProgramCase__c ), ISNULL(PC_ProgramCase__c )) , false, NOT(ISPICKVAL(PC_ProgramCase__r.Type, &apos;Program&apos;)))</errorConditionFormula>
        <errorDisplayField>PC_ProgramCase__c</errorDisplayField>
        <errorMessage>Only Program Cases allowed</errorMessage>
    </validationRules>
</CustomObject>